--- a/src/App.css
+++ b/src/App.css
@@ -109,6 +109,7 @@ html, body {
   margin-top: 1.5rem;
   font-size: 1.5rem;
   margin-bottom: 0;
+  margin-top: 1rem;
 }
 
 .info-link {
@@ -198,8 +199,8 @@ html, body {
     font-size: 1rem;
   }
   .second-page {
-    justify-content: center;
     align-items: flex-start;
+    justify-content: center;
     padding: 2rem 0;
   }
 }
