--- a/src/App.css
+++ b/src/App.css
@@ -94,6 +94,7 @@ html, body {
 
 .hidden {
   opacity: 0;
+  display: none;
   position: absolute;
   transform: translateY(5rem);
   transition: all 0.3s ease-in-out;
@@ -101,6 +102,7 @@ html, body {
 
 .showed {
   position: relative;
+  display: block;
   opacity: 1;
   transform: translateY(0);
 }
