--- a/src/App.css
+++ b/src/App.css
@@ -113,6 +113,19 @@ html, body {
   font-size: 1.5rem;
   margin-bottom: 0;
   margin-top: 1rem;
+  animation: pulse 1s infinite;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.05);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 
 a {
