--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,7 @@ html, body {
   max-width: 40.625rem;
   width: 90%;
   background: rgba(255, 255, 255, 0.9);
-  max-height: 70vh;
+  max-height: 85vh;
   transition: all 0.3s ease-in-out;
   margin-left: 6.25rem;
   padding: 3rem;
@@ -48,10 +48,10 @@ html, body {
   transform: scale(1.01);
 }
 
-
 .letter-wrapper h2 {
   margin-bottom: 0.625rem;
   font-weight: bold;
+  line-height: 1.375rem;
 }
 
 .letter-text {
@@ -86,6 +86,7 @@ html, body {
   font-family: 'Source Code Pro', monospace;
   width: 100%;
   text-align: center;
+  margin: 0.5rem 0;
 }
 
 .Cursor {
